api corregida
